<resources>
    <string name="app_name">ZooTour</string>
    <string name="logodesc">its a logo</string>
    <string name="title">home logo</string>
    <string name="hometxt">Please touch the animal to know more about them</string>
    <string name="enter">Enter</string>
    <string name="user">user</string>
    <string name="devinfo">gives more info on developer</string>
    <string name="username">Name please</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_nav_draw">NavDraw</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Shashikant Vishwakarma</string>
    <string name="nav_header_subtitle">iversions@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_experience">Experience</string>
    <string name="menu_skills">Skills</string>
    <string name="menu_views">Views</string>
    <string name="menu_education">Education</string>
    <string name="menu_expertise">Expertise</string>
    <string name="menu_contact">Contact</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="homeicon">homeicon</string>
    <string name="address"></string>
</resources>
