<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_experience"
            android:icon="@drawable/exp"
            android:title="@string/menu_experience" />
        <item
            android:id="@+id/nav_skills"
            android:icon="@drawable/skills"
            android:title="@string/menu_skills" />
        <item
            android:id="@+id/nav_views"
            android:icon="@drawable/views"
            android:title="@string/menu_views" />
        <item
            android:id="@+id/nav_education"
            android:icon="@drawable/school"
            android:title="@string/menu_education" />
        <item
            android:id="@+id/nav_expertise"
            android:icon="@drawable/expertise"
            android:title="@string/menu_expertise" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/contact"
            android:title="@string/menu_contact" />
    </group>


</menu>
