<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/homeFragment">

    <fragment
        android:id="@+id/nav_experience"
        android:name="com.example.zootour.ui.experience.ExperienceFragment"
        android:label="@string/menu_experience"
        tools:layout="@layout/fragment_experience" />

    <fragment
        android:id="@+id/nav_skills"
        android:name="com.example.zootour.ui.skills.SkillsFragment"
        android:label="@string/menu_skills"
        tools:layout="@layout/fragment_skills" />

    <fragment
        android:id="@+id/nav_views"
        android:name="com.example.zootour.ui.views.ViewsFragment"
        android:label="@string/menu_views"
        tools:layout="@layout/fragment_views" />

    <fragment
        android:id="@+id/nav_education"
        android:name="com.example.zootour.ui.education.EducationFragment"
        android:label="@string/menu_education"
        tools:layout="@layout/fragment_education" />

    <fragment
        android:id="@+id/nav_expertise"
        android:name="com.example.zootour.ui.expertise.ExpertiseFragment"
        android:label="@string/menu_expertise"
        tools:layout="@layout/fragment_expertise" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.zootour.ui.contact.ContactFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contact" />
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.zootour.ui.home.homeFragment"
        android:label="Home"
        tools:layout="@layout/fragment_home" />
</navigation>